<resources>
    <string name="app_name">Just Mother1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hiv">hiv</string>
    <string name="list_name">list name</string>
    <string name="cbc">cbc</string>
    <string name="rbs">rbs</string>
    <string name="tsh">tsh</string>
    <string name="urm">urm</string>
    <string name="end_text">end text</string>
</resources>
