<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tests_page2">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/book_test_heading"
            android:id="@+id/test_list_heading"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/test_list_heading"
            android:layout_marginTop="104dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/rpr_test">
                <ImageView android:layout_width="wrap_content"
                           android:background="@drawable/rpr_test_btn_background"
                           android:id="@+id/rpr_img"
                           android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                           android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                           android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                           app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/cbc"/>
                <Button
                        android:layout_width="wrap_content"
                        android:background="@drawable/more_info_btn"
                        app:layout_constraintTop_toTopOf="@+id/rpr_img"
                        app:layout_constraintBottom_toBottomOf="@+id/rpr_img"
                        android:layout_height="wrap_content"
                        android:id="@+id/rpr_more_inf"
                        android:layout_marginTop="104dp"
                        app:layout_constraintStart_toStartOf="@+id/rpr_img"
                        android:layout_marginStart="20dp"
                        app:layout_constraintVertical_bias="0.627"/>
                <Button
                        android:background="@drawable/booknow_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rpr_book_btn"
                        app:layout_constraintStart_toEndOf="@id/rpr_more_inf"
                        app:layout_constraintTop_toTopOf="@id/rpr_img"
                        app:layout_constraintBottom_toBottomOf="@id/rpr_img"
                        app:layout_constraintEnd_toEndOf="@id/rpr_img"
                        app:layout_constraintHorizontal_bias="0.605" app:layout_constraintVertical_bias="0.91"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/gtt_test">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gtt_img" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.482" android:layout_marginStart="8dp"
                        app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/tsh"
                        app:srcCompat="@drawable/gtt_test_btn_background"/>
                <Button
                        android:background="@drawable/more_info_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/gtt_img"
                        app:layout_constraintStart_toStartOf="@+id/gtt_img"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.884" android:id="@+id/gtt_more_info"/>
                <Button
                        android:background="@drawable/booknow_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/gtt_book_btn"
                        app:layout_constraintStart_toEndOf="@id/gtt_more_info"
                        app:layout_constraintEnd_toEndOf="@id/gtt_img"
                        app:layout_constraintTop_toTopOf="@id/gtt_img"
                        app:layout_constraintBottom_toBottomOf="@id/gtt_img"
                        app:layout_constraintHorizontal_bias="0.582"
                        app:layout_constraintVertical_bias="0.891"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/hepb_test">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/hpb_test_btn_background"
                        android:id="@+id/hepb_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/rbs"/>
                <Button
                        android:background="@drawable/more_info_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hepb_more_inf"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/hepb_img"
                        app:layout_constraintStart_toStartOf="@+id/hepb_img"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="@+id/hepb_img"
                        app:layout_constraintVertical_bias="0.939"/>
                <Button
                        android:background="@drawable/booknow_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/hepb_img"
                        app:layout_constraintTop_toTopOf="@+id/hepb_img"
                        app:layout_constraintEnd_toEndOf="@+id/hepb_img"
                        app:layout_constraintStart_toEndOf="@id/hepb_more_inf"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/hepb_book_btn"
                        app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintHorizontal_bias="0.664"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/hepc_test">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/hpc_test_btn_background"
                        android:id="@+id/hepc_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/hiv"/>
                <Button
                        android:background="@drawable/more_info_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hepc_more_inf"
                        app:layout_constraintStart_toStartOf="@+id/hepc_img"
                        android:layout_marginTop="112dp"
                        app:layout_constraintTop_toTopOf="@+id/hepc_img"
                        app:layout_constraintBottom_toBottomOf="@id/hepc_img"
                        app:layout_constraintVertical_bias="0.0" android:layout_marginStart="12dp"/>
                <Button
                        android:background="@drawable/booknow_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hepc_book_btn"
                        app:layout_constraintTop_toTopOf="@id/hepc_img"
                        app:layout_constraintEnd_toEndOf="@id/hepc_img"
                        app:layout_constraintStart_toEndOf="@id/hepc_more_inf"
                        app:layout_constraintBottom_toBottomOf="@id/hepc_img"
                        app:layout_constraintHorizontal_bias="0.669" app:layout_constraintVertical_bias="0.934"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/hbe_test">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/hbe_test_btn_background"
                        android:id="@+id/hbe_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/urm" app:layout_constraintHorizontal_bias="0.4"
                        app:layout_constraintVertical_bias="0.0"/>
                <Button
                        android:background="@drawable/more_info_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hbe_more_inf"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/hbe_img"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="@id/hbe_img"
                        app:layout_constraintStart_toStartOf="@id/hbe_img"
                        android:layout_marginStart="28dp"
                        app:layout_constraintVertical_bias="0.931"/>
                <Button
                        android:background="@drawable/booknow_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hbe_book_btn"
                        app:layout_constraintStart_toEndOf="@+id/hbe_more_inf"
                        app:layout_constraintEnd_toEndOf="@+id/hbe_img"
                        app:layout_constraintBottom_toBottomOf="@id/hbe_img"
                        app:layout_constraintTop_toTopOf="@id/hbe_img"
                        android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.836"
                        app:layout_constraintHorizontal_bias="0.607"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/eop">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/end_of_the_pg_img"
                        android:id="@+id/eop_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/end_text"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp"/>
                <Button
                        android:background="@drawable/next_tpage_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next_tpg_btn2"
                        app:layout_constraintEnd_toEndOf="@+id/eop_img"
                        app:layout_constraintStart_toEndOf="@+id/prev_tpg_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.959"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <Button
                        android:background="@drawable/prev_tpage_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/prev_tpg_btn"
                        app:layout_constraintEnd_toEndOf="@+id/eop_img"
                        app:layout_constraintStart_toStartOf="@+id/eop_img"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.033"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>